# nonebot-plugin-kancolle

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: build_seed.py  demo_p4_output.py  demo_p5_render.py  demo_p6_admin.py
src/nonebot_plugin_kancolle/: __init__.py  bootstrap.py  config.py  schema.sql
src/nonebot_plugin_kancolle/commands/: __init__.py  _format.py  admin.py  equipment.py  kchelp.py  ship.py
src/nonebot_plugin_kancolle/core/: __init__.py  equipment_resolver.py  resolver.py  result.py
src/nonebot_plugin_kancolle/data/: __init__.py  enhancer.py  fusion.py  improvement_enhancer.py  models.py  store.py
src/nonebot_plugin_kancolle/data/sources/: __init__.py  base.py  github.py  kc3translations.py  kcanotify.py  stype_table.py
src/nonebot_plugin_kancolle/render/: __init__.py  assets.py  cache.py  context.py  equipment_renderer.py  renderer.py
src/nonebot_plugin_kancolle/render/templates/: base.html  equipment_basic.html  equipment_improvement.html  ship_basic.html  ship_remodel.html  ship_stats.html
src/nonebot_plugin_kancolle/seed/: README.md
src/nonebot_plugin_kancolle/update/: __init__.py  pipeline.py  scheduler.py  seed.py
src/nonebot_plugin_kancolle/utils/: __init__.py  limiter.py  logger.py  pinyin.py  text.py
tests/: conftest.py  test_admin_format.py  test_assets.py  test_cache.py  test_context.py  test_enhancer.py  test_equipment_context.py  test_equipment_format.py  test_equipment_fusion.py  test_equipment_kc3.py  test_equipment_kcanotify.py  test_equipment_models.py  test_equipment_resolver.py  test_equipment_store.py  test_format.py  test_fusion.py  test_improvement_enhancer.py  test_improvement_parse.py  test_improvement_store.py  test_kc3translations.py  test_kcanotify.py  test_limiter.py  test_pinyin.py  test_pipeline.py  test_resolver.py  test_seed.py  test_smoke.py  test_store.py  test_stype_table.py
tests/fixtures/: improve_data_sample.json
